--- a/13-ProyectoFinal/html/index.html
+++ b/13-ProyectoFinal/html/index.html
@@ -33,11 +33,11 @@
             <button class="btn-main">Get started</button>
         </div>
     </nav>
-    <section class="home">
+    <section class="sec-home">
         <div class="home-cta">
             <div class="cta-text">
                 <span>Jump start your portfolio</span>
-                <i class="bi bi-arrow-right"></i>                
+                <i class="bi bi-arrow-right"></i>
             </div>
             <h2 class="home-title">Jump start your crypto portfolio</h2>
             <div class="home-description">
@@ -49,14 +49,56 @@
                 </div>
                 <div class="col">
                     <button class="btn-main">Get started </button>
-                </div>  
+                </div>
             </div>
         </div>
         <div class="home-img">
             <img src="../assets/img/wallet.png" alt="wallet">
         </div>
     </section>
-    <section class="features"></section>
+    <section class="sec-features">
+        <div class="intro">
+            <h3>Create your cryptocurrency portfolio today</h3>
+            <p>Coinbase has a variety of features that make it the best place to start trading</p>
+        </div>
+        <div class="features">
+            <div class="text">
+                <div class="feature">
+                    <div class="icono">
+                        <span class="icon-sm"><i class="bi bi-graph-up"></i></span>
+                    </div>
+                    <div class="description">
+                        <h4 class="title">Manage you porfolio</h4>
+                        <p class="text">Buy and sell popular digital currencies, keep track of them in the one place.
+                        </p>
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="icono">
+                        <span class="icon-sm"><i class="bi bi-graph-up"></i></span>
+                    </div>
+                    <div class="description">
+                        <h4 class="title">Manage you porfolio</h4>
+                        <p class="text">Buy and sell popular digital currencies, keep track of them in the one place.
+                        </p>
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="icono">
+                        <span class="icon-sm"><i class="bi bi-graph-up"></i></span>
+                    </div>
+                    <div class="description">
+                        <h4 class="title">Manage you porfolio</h4>
+                        <p class="text">Buy and sell popular digital currencies, keep track of them in the one place.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="../assets/img/charts.png" alt="charts">
+            </div>
+        </div>
+    </section>
 
 </body>
 
